[package]
name = "decode"
version = "0.1.0"
edition = "2024"
description = "A High-Performance Query Tool for JSON, YAML and TOML"
authors = ["Hervé Beraud <herveberaud.pro@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/4383/decode"
keywords = ["json", "query", "cli", "jsonpath", "data-processing"]
categories = ["command-line-utilities", "parser-implementations", "text-processing", "development-tools", "filesystem"]

[dependencies]
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
pest = "2.7"
pest_derive = "2.7"
serde_yaml = "0.9"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }